--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,16 +7,23 @@ services:
     image: williandarosa/codeeducationlaravel
     entrypoint: dockerize
       -template ./.docker/app/.env:.env
+      -template ./.docker/app/.env.testing:.env.testing
       -template ./.docker/app/nginx.conf:./.docker/nginx/nginx.conf
       -wait tcp://db:3306
       -timeout 40s
       ./.docker/entrypoint.sh
     environment:
-      - DB_HOST=cloneflix_micro_videos_db
-      - DB_DATABASE=laravel
-      - DB_USERNAME=root
-      - DB_PASSWORD=root
-      - REDIS_HOST=redis
+      - _DB_HOST=cloneflix_micro_videos_db
+      - _DB_DATABASE=cloneflix_micro_video
+      - _DB_USERNAME=root
+      - _DB_PASSWORD=root
+      - TEST_DB_DATABASE=cloneflix_micro_video_test
+      - _REDIS_HOST=redis
+      - _AWS_ACCESS_KEY_ID=$CLONEFLIX_AWS_ACCESS_KEY_ID
+      - _AWS_SECRET_ACCESS_KEY=$CLONEFLIX_AWS_SECRET_ACCESS_KEY
+      - _AWS_DEFAULT_REGION=$CLONEFLIX_AWS_DEFAULT_REGION
+      - _AWS_BUCKET=$CLONEFLIX_AWS_BUCKET
+      - _AWS_URL=$CLONEFLIX_AWS_URL
       - NGINX_HOST=cloneflix_micro_videos_app
       - NGINX_PORT=9000
     volumes:
@@ -56,11 +63,11 @@ services:
     ports:
       - "3306:3306"
     environment:
-      - MYSQL_DATABASE=laravel
       - MYSQL_ROOT_PASSWORD=root
       - MYSQL_USER=root
     volumes:
       - ./.docker/dbdata:/var/lib/mysql
+      - ./.docker/mysql:/docker-entrypoint-initdb.d
     networks:
       - cloneflix_micro_videos_app_networks
 
