--- a/.docker/app/.env
+++ b/.docker/app/.env
@@ -2,16 +2,16 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:DOt8szoDnnPLaITXjhsTw2nzG9u7WpUqzpeeBXDJSwo=
 APP_DEBUG=true
-APP_URL=http://localhost:8080
+APP_URL=http://localhost:8000
 
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
-DB_HOST={{ .Env.DB_HOST }}
+DB_HOST={{ .Env._DB_HOST }}
 DB_PORT=3306
-DB_DATABASE={{ .Env.DB_DATABASE }}
-DB_USERNAME={{ .Env.DB_USERNAME }}
-DB_PASSWORD={{ .Env.DB_PASSWORD }}
+DB_DATABASE={{ .Env._DB_DATABASE }}
+DB_USERNAME={{ .Env._DB_USERNAME }}
+DB_PASSWORD={{ .Env._DB_PASSWORD }}
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -19,7 +19,7 @@ QUEUE_CONNECTION=sync
 SESSION_DRIVER=cookie
 SESSION_LIFETIME=120
 
-REDIS_HOST={{ .Env.REDIS_HOST }}
+REDIS_HOST={{ .Env._REDIS_HOST }}
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
@@ -31,10 +31,11 @@ MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
 
 FILESYSTEM_DRIVER=video_local
-AWS_ACCESS_KEY_ID=
-AWS_SECRET_ACCESS_KEY=
-AWS_DEFAULT_REGION=us-east-1
-AWS_BUCKET=
+AWS_ACCESS_KEY_ID={{ .Env._AWS_ACCESS_KEY_ID }}
+AWS_SECRET_ACCESS_KEY={{ .Env._AWS_SECRET_ACCESS_KEY }}
+AWS_DEFAULT_REGION={{ .Env._AWS_DEFAULT_REGION }}
+AWS_BUCKET={{ .Env._AWS_BUCKET }}
+AWS_URL={{ .Env._AWS_URL }}
 
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
