--- a/.docker/app/.env.testing
+++ b/.docker/app/.env.testing
@@ -1,5 +1,5 @@
 APP_NAME=Laravel
-APP_ENV=local
+APP_ENV=testing
 APP_KEY=base64:DOt8szoDnnPLaITXjhsTw2nzG9u7WpUqzpeeBXDJSwo=
 APP_DEBUG=true
 APP_URL=http://localhost:8000
