--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -21,7 +21,7 @@ services:
       - _REDIS_HOST=redis
       - _AWS_ACCESS_KEY_ID=$CLONEFLIX_AWS_ACCESS_KEY_ID
       - _AWS_SECRET_ACCESS_KEY=$CLONEFLIX_AWS_SECRET_ACCESS_KEY
-      - _AWS_DEFAULT_REGION=$CLONEFLIX_AWS_DEFAULT_REGION
+      - _AWS_DEFAULT_REGION=us-east-1
       - _AWS_BUCKET=$CLONEFLIX_AWS_BUCKET
       - _AWS_URL=$CLONEFLIX_AWS_URL
       - NGINX_HOST=cloneflix_micro_videos_app
