--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "mui-datatables": "^3.7.8",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.18.0",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "route-parser": "0.0.5",
