--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,35 +2,38 @@
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
-  "dependencies": {
-    "@material-ui/core": "^4.12.3",
-    "@material-ui/icons": "^4.11.2",
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^11.2.7",
-    "@testing-library/user-event": "^12.8.3",
-    "@types/jest": "^26.0.24",
-    "@types/mui-datatables": "^3.7.7",
-    "@types/node": "^12.20.21",
-    "@types/react": "^17.0.19",
-    "@types/react-dom": "^17.0.9",
-    "@types/react-router-dom": "^5.3.1",
-    "axios": "^0.22.0",
-    "date-fns": "^2.25.0",
-    "mui-datatables": "^3.7.8",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-hook-form": "^7.18.0",
-    "react-router-dom": "^5.3.0",
-    "react-scripts": "4.0.3",
-    "route-parser": "0.0.5",
-    "typescript": "^4.4.2",
-    "web-vitals": "^1.1.2"
-  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
+  },
+  "dependencies": {
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^11.2.7",
+    "@testing-library/user-event": "^12.8.3",
+    "@types/jest": "^26.0.24",
+    "@types/mui-datatables": "^3.7.9",
+    "@types/node": "^12.20.50",
+    "@types/react": "^17.0.45",
+    "@types/react-dom": "^17.0.16",
+    "@types/react-router-dom": "^5.3.3",
+    "@types/yup": "^0.29.13",
+    "axios": "^0.22.0",
+    "date-fns": "^2.28.0",
+    "mui-datatables": "^3.8.5",
+    "notistack": "0.9.7",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-hook-form": "^5.7.2",
+    "react-router-dom": "^5.3.1",
+    "react-scripts": "4.0.3",
+    "route-parser": "0.0.5",
+    "typescript": "^4.6.4",
+    "web-vitals": "^1.1.2",
+    "yup": "^0.32.11"
   },
   "eslintConfig": {
     "extends": [
@@ -51,6 +54,6 @@
     ]
   },
   "devDependencies": {
-    "@types/route-parser": "^0.1.3"
+    "@types/route-parser": "^0.1.4"
   }
 }
