Abstraindo Criação Da Tag Form

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "@types/jest": "^26.0.24",
+    "@types/lodash": "^4.14.191",
     "@types/mui-datatables": "^3.7.9",
     "@types/node": "^12.20.50",
     "@types/react": "^17.0.45",
@@ -23,6 +24,7 @@
     "@types/yup": "^0.29.13",
     "axios": "^0.22.0",
     "date-fns": "^2.28.0",
+    "lodash": "^4.17.21",
     "mui-datatables": "^3.8.5",
     "notistack": "0.9.7",
     "react": "^17.0.2",
