--- a/backend/composer.json
+++ b/backend/composer.json
@@ -13,7 +13,8 @@
         "fideloper/proxy": "^4.0",
         "laravel/framework": "^6.2",
         "laravel/tinker": "^2.0",
-        "league/flysystem-aws-s3-v3": "^1.0"
+        "league/flysystem-aws-s3-v3": "^1.0",
+        "tucker-eric/eloquentfilter": "^3.1"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.6",
