--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,6 +32,7 @@
     "react-hook-form": "^5.7.2",
     "react-router-dom": "^5.3.4",
     "react-scripts": "4.0.3",
+    "redux": "^4.2.0",
     "route-parser": "0.0.5",
     "typescript": "^4.9.4",
     "web-vitals": "^1.1.2",
