--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,6 +36,7 @@
     "reduxsauce": "^1.2.1",
     "route-parser": "0.0.5",
     "typescript": "^4.9.4",
+    "use-debounce": "^9.0.3",
     "web-vitals": "^1.1.2",
     "yup": "^0.32.11"
   },
